--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<div>
-<p id="elem" >This is the main container element</p>
+<p class="box" >This is the main container element</p>
 	</div>
 </body>
 
