--- a/main.html
+++ b/main.html
@@ -10,9 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<div>
-<p class="box" >This is the main container element</p>
-	</div>
+	<div class="box">This is the main container element</div>
 </body>
 
 </html>
